# AndroidCameraNdkFramework

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xenobox/androidcameraframework/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CameraEngineManager.cpp  CameraEngineManager.h  native-lib.cpp
app/src/main/cpp/camera/: CameraCaptureRequest.cpp  CameraCaptureRequest.h  CameraCaptureSession.cpp  CameraCaptureSession.h  CameraDevice.cpp  CameraDevice.h  CameraManager.cpp  CameraManager.h  CameraOutputTarget.cpp  CameraOutputTarget.h  CameraSessionOutput.cpp  CameraSessionOutput.h  CameraSessionOutputContainer.cpp  CameraSessionOutputContainer.h
app/src/main/cpp/common/: Logger.h
app/src/main/cpp/opengl/: OpenGLManager.cpp  OpenGLManager.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLMeshRectangle.cpp  OpenGLMeshRectangle.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLModelCameraScreen.cpp  OpenGLModelCameraScreen.h  OpenGLModelRectangle.cpp  OpenGLModelRectangle.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderA.cpp  OpenGLShaderA.h  OpenGLShaderB.cpp  OpenGLShaderB.h  OpenGLShaderDefault.cpp  OpenGLShaderDefault.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureExternalOES.cpp  OpenGLTextureExternalOES.h  OpenGLTextureImage.cpp  OpenGLTextureImage.h
app/src/main/java/com/xenobox/androidcameraframework/: CameraGLSurfaceView.kt  CameraGLSurfaceViewRenderer.kt  MainActivity.kt  ReferenceWebsites.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xenobox/androidcameraframework/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
